--- a/api_hotel/package.json
+++ b/api_hotel/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "js-yaml": "^3.13.0",
     "jwt-simple": "^0.5.5",
